--- a/experiment-2/analysis/preprocessor/included_summary.Rmd
+++ b/experiment-2/analysis/preprocessor/included_summary.Rmd
@@ -87,10 +87,14 @@ dt_vel_diff[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Conditi
 
 ### Export only included participants
 data_analysis~.txt are used for data analysis.
-```{r export, echo = TRUE}
+```{r export-csv, echo = TRUE}
 fwrite(dt_ioi[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_ioi.txt", sep = ",")
 fwrite(dt_kor[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_kor.txt", sep = ",")
 fwrite(dt_kot[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_kot.txt", sep = ",")
 fwrite(dt_vel[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_vel.txt", sep = ",")
 fwrite(dt_vel_diff[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_vel_diff.txt", sep = ",")
+```
+
+```{r export, include = FALSE}
+knitr::purl("included_summary.Rmd")
 ```
