--- a/experiment-2/analysis/preprocessor/included_summary.Rmd
+++ b/experiment-2/analysis/preprocessor/included_summary.Rmd
@@ -29,7 +29,7 @@ dt_vel_diff <- fread(file = "./trimmed/data_vel_diff.txt", sep = ",")
 # Design
 - Each performance (1 trial) contains 72 responses for onsets and 72 responses for offsets (i.e., if there is no mistake, 144 responses in total)
 - Each block contains 8 trials and there are 4 blocks (teaching vs. performing x articulation vs. dynamics)
-- Note: SubNr 3 was excluded due to insufficient motor skills. SubNr 2 was excluded due to a deviated tempo.
+- Note: SubNr 3 was excluded due to insufficient motor skills.
 
 ### IOIs (All)
 ```{r ioi, echo = FALSE}
@@ -88,11 +88,11 @@ dt_vel_diff[, .(N = .N, Mean = mean(Diff), SD = sd(Diff)), by = .(SubNr, Conditi
 ### Export only included participants
 data_analysis~.txt are used for data analysis.
 ```{r export-csv, echo = TRUE}
-fwrite(dt_ioi[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_ioi.txt", sep = ",")
-fwrite(dt_kor[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_kor.txt", sep = ",")
-fwrite(dt_kot[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_kot.txt", sep = ",")
-fwrite(dt_vel[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_vel.txt", sep = ",")
-fwrite(dt_vel_diff[SubNr != 2 & SubNr != 3], file = "./trimmed/data_analysis_vel_diff.txt", sep = ",")
+fwrite(dt_ioi[SubNr != 3], file = "./trimmed/data_analysis_ioi.txt", sep = ",")
+fwrite(dt_kor[SubNr != 3], file = "./trimmed/data_analysis_kor.txt", sep = ",")
+fwrite(dt_kot[SubNr != 3], file = "./trimmed/data_analysis_kot.txt", sep = ",")
+fwrite(dt_vel[SubNr != 3], file = "./trimmed/data_analysis_vel.txt", sep = ",")
+fwrite(dt_vel_diff[SubNr != 3], file = "./trimmed/data_analysis_vel_diff.txt", sep = ",")
 ```
 
 ```{r export, include = FALSE}
