removed styles from plots
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/experiment-2/analysis/stats/ioi.Rmd
+++ b/experiment-2/analysis/stats/ioi.Rmd
@@ -94,8 +94,7 @@ ioi_art
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-art-box,  echo = FALSE}
-ggboxplot(dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", palette = "aaas", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Articulation") + 
-  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+ggboxplot(dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Articulation") + 
   geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
@@ -116,14 +115,12 @@ ioi_art_all
 ```{r ioi-art-all-box, echo = FALSE}
 ioi_art_plot <- data.table(subject = ioi_art[Condition == "teaching"]$SubNr, teaching = ioi_art[Condition == "teaching"]$Mean, performing = ioi_art[Condition == "performing"]$Mean)
 
-ggpaired(ioi_art_plot, cond1 = "performing", cond2 = "teaching", color = "condition", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Articulation") +
-  geom_hline(yintercept = 1, linetype = "dashed") +
-  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+ggpaired(ioi_art_plot, cond1 = "performing", cond2 = "teaching", color = "condition", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Articulation") +
+  geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 ### Statistics
 #### Normality check
-
 ```{r normality1, echo = FALSE}
 # Normality check
 ioi_art_diff <- ioi_art[Condition == "teaching"]$Mean-ioi_art[Condition == "performing"]$Mean
@@ -132,7 +129,6 @@ ioi_art_norm
 ```
 
 #### Paired *t*-test
-
 ```{r paired-art, echo = FALSE}
 ioi_art_ttest <- t.test(ioi_art[Condition == "teaching"]$Mean, ioi_art[Condition == "performing"]$Mean, paired = TRUE, alternative = "two.sided")
 ioi_art_ttest
@@ -162,8 +158,7 @@ ioi_art_ch
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-art-ch-box, echo = FALSE}
-ggboxplot(dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Boundary)], "SubNr", "Mean", color = "Condition", palette = "aaas", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Articulation") + 
-  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+ggboxplot(dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Boundary)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Articulation") +
   facet_grid(Boundary ~ .) +
   geom_hline(yintercept = 1, linetype = "dashed")
 ```
@@ -185,9 +180,8 @@ ioi_art_ch_all
 ```{r ioi-art-ch-all-box, echo = FALSE}
 ioi_art_ch_plot <- data.table(subject = ioi_art_ch[Condition == "teaching"]$SubNr, teaching = ioi_art_ch[Condition == "teaching"]$Mean, performing = ioi_art_ch[Condition == "performing"]$Mean, boundary = ioi_art_ch[Condition == "teaching"]$Boundary)
 
-ggpaired(ioi_art_ch_plot, cond1 = "performing", cond2 = "teaching", color = "condition", facet.by = "boundary", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Articulation") +
-  geom_hline(yintercept = 1, linetype = "dashed") +
-  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+ggpaired(ioi_art_ch_plot, cond1 = "performing", cond2 = "teaching", color = "condition", facet.by = "boundary", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Articulation") +
+  geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 ### Statistics
@@ -217,9 +211,8 @@ ioi_art_trial
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-art-trial-line, echo = FALSE, fig.height = 4}
-ggline(dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "Normalised IOIs", title = "IOI: Articulation") +
+ggline(dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Normalised IOIs", title = "IOI: Articulation") +
   facet_wrap(SubNr ~ .) +
-  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
   scale_x_continuous(breaks = seq(1,8,1)) +
   geom_hline(yintercept = 1, linetype = "dashed")
 ```
@@ -239,9 +232,8 @@ ioi_art_trial_all
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-art-trial-all-line, echo = FALSE}
-ggline(ioi_art_trial, x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Normalised IOIs", title = "IOI: Articulation") +
+ggline(ioi_art_trial, x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Normalised IOIs", title = "IOI: Articulation") +
   geom_hline(yintercept = 1, linetype = "dashed") +
-  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
   scale_x_continuous(breaks = seq(1,8,1))
 ```
 
@@ -260,8 +252,7 @@ ioi_dyn
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-dyn-box,  echo = FALSE}
-ggboxplot(dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", palette = "aaas", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") + 
-  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+ggboxplot(dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") + 
   geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
@@ -282,9 +273,8 @@ ioi_dyn_all
 ```{r ioi-dyn-all-box, echo = FALSE}
 ioi_dyn_plot <- data.table(subject = ioi_dyn[Condition == "teaching"]$SubNr, teaching = ioi_dyn[Condition == "teaching"]$Mean, performing = ioi_dyn[Condition == "performing"]$Mean)
 
-ggpaired(ioi_dyn_plot, cond1 = "performing", cond2 = "teaching", color = "condition", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
-  geom_hline(yintercept = 1, linetype = "dashed") +
-  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+ggpaired(ioi_dyn_plot, cond1 = "performing", cond2 = "teaching", color = "condition", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
+  geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 ### Statistics
@@ -328,8 +318,7 @@ ioi_dyn_ch
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-dyn-ch-box, echo = FALSE}
-ggboxplot(dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Boundary)], "SubNr", "Mean", color = "Condition", palette = "aaas", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") + 
-  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
+ggboxplot(dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr, Boundary)], "SubNr", "Mean", color = "Condition", xlab = "SubNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") + 
   facet_grid(Boundary ~ .) +
   geom_hline(yintercept = 1, linetype = "dashed")
 ```
@@ -351,9 +340,8 @@ ioi_dyn_ch_all
 ```{r ioi-dyn-ch-all-box, echo = FALSE}
 ioi_dyn_ch_plot <- data.table(subject = ioi_dyn_ch[Condition == "teaching"]$SubNr, teaching = ioi_dyn_ch[Condition == "teaching"]$Mean, performing = ioi_dyn_ch[Condition == "performing"]$Mean, boundary = ioi_dyn_ch[Condition == "teaching"]$Boundary)
 
-ggpaired(ioi_dyn_ch_plot, cond1 = "performing", cond2 = "teaching", color = "condition", facet.by = "boundary", line.size = 0.3, line.color = "gray", palette = "aaas", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
-  geom_hline(yintercept = 1, linetype = "dashed") +
-  theme_pubr(base_size = 20, legend = "none", base_family = "Helvetica Neue LT Std 57 Condensed")
+ggpaired(ioi_dyn_ch_plot, cond1 = "performing", cond2 = "teaching", color = "condition", facet.by = "boundary", line.size = 0.3, line.color = "gray", xlab = "Condition", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
+  geom_hline(yintercept = 1, linetype = "dashed")
 ```
 
 ### Statistics
@@ -383,9 +371,8 @@ ioi_dyn_trial
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-dyn-trial-line, echo = FALSE, fig.height = 4}
-ggline(dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", shape = "Condition", color = "Condition", palette = "aaas", xlab = "TrialNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
+ggline(dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, BlockNr, TrialNr)], x = "TrialNr", y = "Mean", shape = "Condition", color = "Condition", xlab = "TrialNr", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
   facet_wrap(SubNr ~ .) +
-  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
   scale_x_continuous(breaks = seq(1,8,1)) +
   geom_hline(yintercept = 1, linetype = "dashed")
 ```
@@ -405,9 +392,8 @@ ioi_dyn_trial_all
 - A dashed line represents the tempo given by a metronome.
 
 ```{r ioi-dyn-trial-all-line, echo = FALSE}
-ggline(ioi_dyn_trial, x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", palette = "aaas", xlab = "Trial", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
+ggline(ioi_dyn_trial, x = "TrialNr", y = "Mean", add = "mean_se", position = position_dodge(.2), shape = "Condition", color = "Condition", xlab = "Trial", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
   geom_hline(yintercept = 1, linetype = "dashed") +
-  theme_pubr(base_size = 20, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
   scale_x_continuous(breaks = seq(1,8,1))
 ```
 # Sequence plot
@@ -416,9 +402,8 @@ ggline(ioi_dyn_trial, x = "TrialNr", y = "Mean", add = "mean_se", position = pos
 # For each individual
 ioi_art_seq <- dt_ioi_art[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(ioi_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "Normalised IOIs", title = "IOI: Articulation") +
+ggline(ioi_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "Normalised IOIs", title = "IOI: Articulation") +
   geom_hline(yintercept = 1, linetype = "dashed") +
-  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
   scale_x_continuous(breaks = seq(1,71,1))
 ```
 
@@ -427,9 +412,8 @@ ggline(ioi_art_seq, x = "Interval", y = "Mean", add = "mean_se", position = posi
 # For each individual
 ioi_dyn_seq <- dt_ioi_dyn[, .(N = .N, Mean = mean(normIOI), SD = sd(normIOI)), by = .(SubNr, Condition, Skill, Interval)]
 
-ggline(ioi_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", palette = "aaas", xlab = "Interval", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
+ggline(ioi_dyn_seq, x = "Interval", y = "Mean", add = "mean_se", position = position_dodge(.2), linetype = "Condition", shape = "Condition", color = "Condition", xlab = "Interval", ylab = "Normalised IOIs", title = "IOI: Dynamics") +
   geom_hline(yintercept = 1, linetype = "dashed") +
-  theme_pubr(base_size = 12, legend = "bottom", base_family = "Helvetica Neue LT Std 57 Condensed") +
     scale_x_continuous(breaks = seq(1,71,1))
 ```
 
